Adjusting phone placement

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span id="card_gwmv" style="font-size: 18px;font-family:'Times New Roman', Times, serif;"><b>George Washington's Mount Vernon</b><br></span>
         <span style="font-size: 16px;font-family:'Times New Roman', Times, serif;"><i>The Mount Vernon Ladies' Association</i></span><br><br>
         <span style="font-size: 13px;font-family:'Times New Roman', Times, serif;">P.O. Box 110, Mount Vernon, Virginia 22121<br>
-        <span style="font-size: 13px;font-family:'Times New Roman', Times, serif;">O: <span id="card_phoneoffice">703-799-6852</span><br> 
+        <span style="font-size: 13px;font-family:'Times New Roman', Times, serif;">O: <span id="card_phoneoffice">703-799-6852</span> |  
         C: <span id="card_phonecell">703-608-3413</span><br> 
         <a id="card_email" href="mailto:info@mountvernon.org">mbriney@mountvernon.org</a><br> 
         <a href="http://www.mountvernon.org/">mountvernon.org</a> | @mountvernon</span></p>               
