Added additional font styling

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <p>Select and copy the block below into your email client.</p>
         <hr>
         <p>&nbsp;</p>
-        <img id="card_seal" src="https://images.squarespace-cdn.com/content/65aeca2dd36eb03cc1110bce/11f8f552-1d8a-43c8-abcd-91c6fb1db328/trplf-email-sig.png?content-type=image%2Fpng" style="float: left;padding-right: 10px; padding-bottom: 90px;">
-        <p style="font-family:Georgia, Garamond, 'Times New Roman', Times, serif"><b style="font-size: 13px;"><span id="card_name">Name</span></b><br>
+        <p style="font-family:Georgia, Garamond, 'Times New Roman', Times, serif"><img id="card_seal" src="https://raw.githubusercontent.com/Theodore-Roosevelt-Presidential-Library/EmailSignatureGenerator/main/trplf-email-sig.png" width="139" height="82" style="float: left;padding-right: 10px; padding-bottom: 90px;">
+        <b style="font-size: 13px;"><span id="card_name">Name</span></b><br>
         <span id="card_jobtitle" style="font-size: 13px;line-height: 1.6;">Job</span><br>
         <span style="font-size: 13px;font-family:Georgia, Garamond, 'Times New Roman', Times, serif;">Phone: <span id="card_phonecell">Phone</span><br> 
         <span style="font-size: 13px;font-family:Georgia, Garamond, 'Times New Roman', Times, serif;">Email: <span id="card_email">me@trlibrary.com</span><br> 
-        <span id="card_meeting" style="font-size: 13px;font-family:Georgia, Garamond, 'Times New Roman', Times, serif;"><a id="card_meeting_url" href="http://trlibrary.org/">Schedule a Meeting</a><br></span> 
-        <span style="font-size: 13px;font-family:Georgia, Garamond, 'Times New Roman', Times, serif; line-height: 1.6;"><a href="http://trlibrary.org/">Get in the Arena</a></span></p>               
+        <span id="card_meeting" style="font-size: 13px;font-family:Georgia, Garamond, 'Times New Roman', Times, serif;"><a style="color: #000" id="card_meeting_url" href="http://trlibrary.org/">Schedule a Meeting</a><br></span> 
+        <span style="font-size: 13px;font-family:Georgia, Garamond, 'Times New Roman', Times, serif; line-height: 1.6;"><a style="color: #000" href="http://trlibrary.org/">Get in the Arena</a> | <a style="color: #000" href="https://linkin.bio/trlibrary">#trlibrary</a> </span></p>               
 
 
         <script type="text/javascript">
