--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span style="font-size: 13px;font-family:Georgia, Garamond, 'Times New Roman', Times, serif;">Phone: <span id="card_phonecell">Phone</span><br> 
         <span style="font-size: 13px;font-family:Georgia, Garamond, 'Times New Roman', Times, serif;">Email: <span id="card_email">me@trlibrary.com</span><br> 
         <span id="card_meeting" style="font-size: 13px;font-family:Georgia, Garamond, 'Times New Roman', Times, serif;"><a style="color: #000" id="card_meeting_url" href="http://trlibrary.org/">Schedule a Meeting</a><br></span> 
-        <span style="font-size: 13px;font-family:Georgia, Garamond, 'Times New Roman', Times, serif; line-height: 1.6;"><a style="color: #000" href="http://trlibrary.org/">Get in the Arena</a> | <a style="color: #000" href="https://linkin.bio/trlibrary">#trlibrary</a> </span></p>               
+        <span style="font-size: 13px;font-family:Georgia, Garamond, 'Times New Roman', Times, serif; line-height: 1.6;"><a style="color: #000" href="http://trlibrary.org/">Get in the Arena</a> | <a style="color: #000" href="https://linktr.ee/trplf">#trlibrary</a> </span></p>               
 
 
         <script type="text/javascript">
